Fix white safe area on iOS by setting background on html element

--- a/themes/os-shell/static/css/main.css
+++ b/themes/os-shell/static/css/main.css
@@ -89,6 +89,7 @@ html {
   font-size: 15px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: var(--desktop-bg);
 }
 
 body {
